# toy_cleaner

./: CMakeLists.txt  README.md  package.xml
moveit2_ws/src/panda_moveit_config/: .setup_assistant  package.xml
moveit2_ws/src/pick_pose_panda/: CMakeLists.txt  package.xml
moveit2_ws/src/pick_pose_panda/src/: pose_picker_src.cpp
scripts/: jetbot_control.py  jetbot_control_PID.py  position_control.py  velocity_control.py
src/vbm_project/vbm_project_env/: CMakeLists.txt  package.xml  panda_arm.xacro
src/vbm_project/vbm_project_env/config/: controllers.yaml
src/vbm_project/vbm_project_env/description/: camera.xacro  manipulator.control.xacro  manipulator.urdf.xacro  panda_arm.xacro  panda_hand.xacro
src/vbm_project/vbm_project_env/launch/: simulation.launch.py
urdf/: jackal.urdf
usd/: carter.usd  jackal.usd  jetbot.usd
vision/src/capstone_vision/: CMakeLists.txt  package.xml
vision/src/capstone_vision/launch/: camera_reading.launch.py  camera_reading_demo.launch.py
vision/src/capstone_vision/scripts/: camera_reading_node.py  camera_reading_node_demo.py  clustering_node.py  coordinate_finder_node.py  transform_point_cloud.py
vision/src/capstone_vision/src/: processPointCloud.cpp
vision/src/capstone_vision_env/: CMakeLists.txt  package.xml
vision/src/capstone_vision_env/launch/: simulation.launch.py
vision/src/capstone_vision_env/worlds/: simulation.world
